# bevy_lightyear_sandbox

./: Cargo.toml  index.html
src/: client.rs  main.rs  protocol.rs  render.rs  server.rs  shared.rs
src/shared/: constants.rs  mod.rs  world_generator.rs
