[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = true, features = ["2d"] }
bevy-inspector-egui = "0.36.0"
lightyear ={ version = "0.26.4", features = [
  "client", "server", "netcode", "udp", "interpolation", "prediction", "replication", "input_native", "websocket"
] }
aeronet_websocket = { version = "0.19.1" }
serde = "1.0.228"
clap = { version = "4.5.59", features = ["derive"] }
bevy_ecs_tilemap = "0.18.1"
rand = "0.10.0"
