[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"

[features]
default = [
  # "client",
  # "server",
  # "world_generator"
]
client = []
server = []
world_generator = []

[dependencies]
bevy = { version = "0.18", default-features = true, features = ["2d"] }
bevy_ecs = "0.18"
bevy-inspector-egui = "0.36.0"
bevy_ecs_tilemap = "0.18.1"

lightyear ={ version = "0.26.4", features = [
  "client",
  "server",
  "netcode",
  "udp",
  "interpolation",
  "prediction",
  "replication",
  "input_native",
  "websocket",
  "avian2d",
  "leafwing",
  "frame_interpolation",
] }
lightyear_avian2d = {version = "0.26.4", features = ["2d", "lag_compensation"]}

avian2d = { version = "0.5.0", features = [
  "2d",
  "debug-plugin",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
] }

leafwing-input-manager = "0.20"
aeronet_websocket = { version = "0.19.1" }
serde = "1.0.228"
clap = { version = "4.5.59", features = ["derive"] }
rand = "0.10.0"
noise = "0.9"
